<resources>
    <string name="app_name">UFOTerminal</string>
    <string name="how_to_use">～ 使い方 ～</string>
    <string name="description">1.   U.F.O. SA の電源を入れる\n\n2.   接続 ボタンを押す\n\n3.   接続完了\n\n4.   U.F.O. SA を自由に操作</string>
    <string name="copyright">fuurin 2018/12 v1.0.0</string>
    <string name="connect">接続</string>
    <string name="disconnect">切断</string>
    <string name="connecting">接続中です…</string>
    <string name="connected">接続済みです</string>
    <string name="disconnected">接続されていません</string>
    <string name="timeout">タイムアウトしました</string>
    <string name="confirm_disconnect_title">通信切断</string>
    <string name="confirm_disconnect_message">本当に通信を切断しますか？</string>
    <string name="confirm_ble_off_title">アプリ終了</string>
    <string name="confirm_ble_off_message">Bluetoothをオフにしますか？</string>
    <string name="confirm_ok">はい</string>
    <string name="confirm_cancel">いいえ</string>
    <string name="record_header">記録</string>
    <string name="record_start">記録スタート</string>
    <string name="record_stop">記録終了</string>
    <string name="record_complete">を保存しました</string>
    <string name="record_overwrite">を上書き保存しました</string>
    <string name="record_failed">保存されませんでした</string>
    <string name="record_abandoned">操作記録を破棄しました</string>
    <string name="record_save_title">操作記録の保存</string>
    <string name="record_save_message">操作記録ファイルの名前</string>
    <string name="record_pause">一時停止</string>
    <string name="record_restart">再開</string>
    <string name="record_save">保存</string>
    <string name="record_abandon">破棄</string>
    <string name="record_cancel">キャンセル</string>
    <string name="confirm_record_abandon_title">記録データ破棄</string>
    <string name="confirm_record_abandon_message">本当に記録したデータを破棄しますか？</string>
    <string name="control_header">操作</string>
    <string name="control_start">スタート</string>
    <string name="control_stop">ストップ</string>
    <string name="control_random_power">ランダムパワー</string>
    <string name="control_restart">再開</string>
    <string name="control_left">左回転</string>
    <string name="control_right">右回転</string>
    <string name="control_random">ランダム回転</string>
    <string name="record_list_header">記録リスト</string>
    <string name="record_time">作成日時： </string>
    <string name="record_length">再生時間： </string>
    <string name="record_rename">名前</string>
    <string name="record_delete">削除</string>
    <string name="record_rename_title">操作記録の名前変更</string>
    <string name="record_rename_message">操作記録ファイルの新しい名前</string>
    <string name="confirm_record_delete_title">記録データ削除</string>
    <string name="confirm_record_delete_message">本当に記録したデータを削除しますか？</string>
    <string name="confirm_record_overwrite_title">記録の上書き</string>
    <string name="confirm_record_overwrite_message">同じ名前のファイルがあります．\n上書きしますか？</string>
    <string name="play_header">再生</string>
    <string name="play_continuously">連続再生</string>
    <string name="play_start">再生</string>
    <string name="play_pause">一時停止</string>
    <string name="play_back_origin">最初に戻る</string>
    <string name="play_back_1">←1.0</string>
    <string name="play_forward_1">1.0→</string>
    <string name="play_forward_5">5.0→</string>
    <string name="play_forward_10">10.0→</string>
    <string name="play_send_record">記録を共有</string>
    <string name="play_send_record_address">送信先メールアドレス</string>
    <string name="play_send_record_ok">送信</string>
    <string name="play_send_record_cancel">キャンセル</string>
    <string name="play_send_record_title">UFOSAの記録ファイル</string>
    <string name="play_send_record_success">記録ファイルを送信しました</string>
    <string name="play_send_record_failed">記録ファイルの送信に失敗しました</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
