<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOnWeak"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/connectionStateText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center_vertical|end"
        android:text="@string/disconnected"
        android:textColor="@color/colorOnStrong" />

    <ToggleButton
        android:id="@+id/connectionButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:textOff="@string/connect"
        android:textOn="@string/disconnect" />
</LinearLayout>