<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".UFOPlayerFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="1dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/header"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/play_header"
        android:textColor="@color/colorOnStrong"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/playTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:textAlignment="textStart">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_time"
                    android:textColor="@color/colorSubInfo"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/playCreatedTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSubInfo"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:textAlignment="textStart">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_length"
                    android:textColor="@color/colorSubInfo"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/playLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSubInfo"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="0dp">

            <ToggleButton
                android:id="@+id/playContinuouslyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/play_continuously"
                android:textOn="@string/play_continuously" />

        </LinearLayout>

    </LinearLayout>

    <ToggleButton
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginVertical="5dp"
        android:textOff="@string/play_start"
        android:textOn="@string/play_pause" />

    <TextView
        android:id="@+id/playTimeText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="5dp"
        android:background="@drawable/text_frame"
        android:gravity="center_vertical|end"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="gravity"
        android:textSize="32sp" />

    <SeekBar
        android:id="@+id/playTimeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:indeterminate="false"
        android:splitTrack="false"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back1Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_back_1" />

        <Button
            android:id="@+id/forward1Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_forward_1" />

        <Button
            android:id="@+id/forward5Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_forward_5" />

        <Button
            android:id="@+id/forward10Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_forward_10" />

    </LinearLayout>

    <Button
        android:id="@+id/sendRecordButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="5dp"
        android:text="@string/play_send_record" />

</LinearLayout>